--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/convex-combinations.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/convex-combinations.ipynb
@@ -197,7 +197,7 @@
     "This means that no matter how we choose $U,$ we're just going to get a uniform random bit from the measurement.\n",
     "\n",
     "We can perform a similar verification for any other pair of orthonormal states in place of $\\vert 0\\rangle$ and $\\vert 1\\rangle.$\n",
-    "For example, because $\\{\\vert + \\rangle, \\vert - \\rangle\\}$ is an orthonormal basis, the probability to obtain the measurement outcome $0$ is in the second procedure is\n",
+    "For example, because $\\{\\vert + \\rangle, \\vert - \\rangle\\}$ is an orthonormal basis, the probability to obtain the measurement outcome $0$ in the second procedure is\n",
     "\n",
     "$$\n",
     "\\frac{1}{2}\\vert \\langle 0 \\vert U \\vert + \\rangle \\vert^2\n",
