--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/convex-combinations.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/convex-combinations.ipynb
@@ -236,7 +236,7 @@
     "and in general we have a single $1$ on the diagonal in the position corresponding to the classical state we have in mind, with all other entries zero.\n",
     "\n",
     "We can then take convex combinations of these density matrices to represent probabilistic states.\n",
-    "Supposing for simplicity that our classical state set is $\\{0,\\ldots,n-1\\},$ if we have that $\\mathsf{X}$ is in the state $a$ with probability $p_a$ for each $a\\in\\{0,\\ldots,n-1\\},$ then the density matrix we obtain is\n",
+    "Supposing for simplicity that our classical state set is $\\{0,\\ldots,n-1\\},$ if  $\\mathsf{X}$ is in the state $a$ with probability $p_a$ for each $a\\in\\{0,\\ldots,n-1\\},$ then the density matrix we obtain is\n",
     "\n",
     "$$\n",
     "\\rho = \\sum_{a = 0}^{n-1} p_a \\vert a\\rangle \\langle a \\vert\n",
