--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm.ipynb
@@ -174,7 +174,7 @@
     "\n",
     "## The Bernstein-Vazirani problem\n",
     "\n",
-    "Next we'll discuss a problem known as the *Bernstein-Vazirani problem*.\n",
+    "Next, we'll discuss a problem known as the *Bernstein-Vazirani problem*.\n",
     "It's also called the *Fourier sampling problem*, although there are more general formulations of this problem that also go by that name.\n",
     "\n",
     "First, let's introduce some notation.\n",
