--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/bloch-sphere.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/bloch-sphere.ipynb
@@ -125,7 +125,7 @@
     "   $$\n",
     "\n",
     "   By collecting the coefficients of the Pauli matrices in the numerator, we see that the corresponding point on the unit $2$-sphere using Cartesian coordinates is $(0,0,1).$\n",
-    "   In spherical coordinates this point is $(1,0,\\phi)$ where $\\phi$ can be any angle.\n",
+    "   In spherical coordinates this point is $(1,0,\\phi),$ where $\\phi$ can be any angle.\n",
     "   This is consistent with the expression\n",
     "\n",
     "   $$\n",
