--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
@@ -98,7 +98,7 @@
     "   $$\n",
     "\n",
     "2. *Ensembles of quantum states.*\n",
-    "   Suppose we have $m$ density matrices $\\rho_0,\\ldots,\\rho_{m-1},$ all representing states of a system $\\mathsf{X},$ and we  randomly choose one of these states according to a probability vector $(p_0,\\ldots,p_{m-1}).$ Such a process is represented by an *ensemble* of states, which includes the specification of the density matrices $\\rho_0,\\ldots,\\rho_{m-1}$ as well as the probabilities $(p_0,\\ldots,p_{m-1}).$ We can associate an ensemble of states with a single density matrix, describing both the random choice of $k$ and the corresponding density matrix $\\rho_k,$ like this:\n",
+    "   Suppose we have $m$ density matrices $\\rho_0,\\ldots,\\rho_{m-1},$ all representing states of a system $\\mathsf{X},$ and we  randomly choose one of these states according to a probability vector $(p_0,\\ldots,p_{m-1}).$ Such a process is represented by an *ensemble* of states, which includes the specification of the density matrices $\\rho_0,\\ldots,\\rho_{m-1},$ as well as the probabilities $(p_0,\\ldots,p_{m-1}).$ We can associate an ensemble of states with a single density matrix, describing both the random choice of $k$ and the corresponding density matrix $\\rho_k,$ like this:\n",
     "\n",
     "   $$\n",
     "   \\sum_{k = 0}^{m-1} p_k \\vert k\\rangle \\langle k \\vert \\otimes \\rho_k.\n",
