--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "   To be clear, this is the state of a pair $(\\mathsf{Y},\\mathsf{X})$ where $\\mathsf{Y}$ represents the classical selection of $k$ — so we're assuming its classical state set is $\\{0,\\ldots,m-1\\}.$ States of this form are sometimes called *classical-quantum states*.\n",
     "\n",
-    "3. *Separable states*. We can imagine situations in which we have a classical correlation among the quantum states of two systems like this.\n",
+    "3. *Separable states*. We can imagine situations in which we have a classical correlation among the quantum states of two systems like this:\n",
     "\n",
     "   $$\n",
     "   \\sum_{k = 0}^{m-1} p_k \\rho_k \\otimes \\sigma_k\n",
