--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
@@ -109,7 +109,7 @@
     "3. *Separable states*. We can imagine situations in which we have a classical correlation among the quantum states of two systems like this:\n",
     "\n",
     "   $$\n",
-    "   \\sum_{k = 0}^{m-1} p_k \\rho_k \\otimes \\sigma_k\n",
+    "   \\sum_{k = 0}^{m-1} p_k \\rho_k \\otimes \\sigma_k.\n",
     "   $$\n",
     "\n",
     "   In words, for each $k$ from $0$ to $m-1,$ we have that with probability $p_k$ the system on the left is in the state $\\rho_k$ and the system on the right is in the state $\\sigma_k.$ States like this are called *separable states*. This concept can also be extended to more than two systems.\n",
