--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/quantum-channel-basics.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/quantum-channel-basics.ipynb
@@ -32,7 +32,7 @@
     "If we apply the channel to $\\rho$ we obtain the density matrix $\\Phi(\\rho)$ and if we apply it to $\\sigma$ we obtain the density matrix $\\Phi(\\sigma).$\n",
     "Thus, if we randomly choose the input state of $\\mathsf{X}$ to be $\\rho$ with probability $p$ and $\\sigma$ with probability $1-p,$ we'll obtain the output state $\\Phi(\\rho)$ with probability $p,$ and $\\Phi(\\sigma)$ with probability $1-p,$ which we represent by a weighted average of density matrices as $p\\Phi(\\rho) + (1-p)\\Phi(\\sigma).$\n",
     "\n",
-    "On the other hand, we could alternatively think about the input state of the channel as being represented by the weighted average $p\\rho + (1-p)\\sigma,$ in which case the output is $\\Phi(p\\rho + (1-p)\\sigma).$\n",
+    "On the other hand, we could think about the input state of the channel as being represented by the weighted average $p\\rho + (1-p)\\sigma,$ in which case the output is $\\Phi(p\\rho + (1-p)\\sigma).$\n",
     "It's the same state regardless of how we choose to think about it, so we must have\n",
     "\n",
     "$$\n",
