--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/quantum-channel-basics.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/quantum-channel-basics.ipynb
@@ -108,7 +108,7 @@
     "This time the block matrix description doesn't work because the matrices $\\rho_{a,b}$ don't fall into consecutive rows and columns in $\\rho,$ but it's the same underlying mathematical structure.\n",
     "\n",
     "Any linear mapping that satisfies the requirement that it always transforms density matrices into density matrices, even when it's applied to just one part of a compound systems, represents a valid channel.\n",
-    "So, in an abstract sense, the notion of a channel is determined by the notion of a density matrix together with the assumption that channels act linearly.\n",
+    "So, in an abstract sense, the notion of a channel is determined by the notion of a density matrix, together with the assumption that channels act linearly.\n",
     "In this regard, channels are analogous to unitary operations in the simplified formulation of quantum information, which are precisely the linear mappings that always transform quantum state vectors to quantum state vectors for a given system; as well as to probabilistic operations (represented by stochastic matrices) in the standard formulation of classical information, which are precisely the linear mappings that always transform probability vectors into probability vectors.\n",
     "\n",
     "## Unitary operations as channels\n",
