--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/quantum-channel-basics.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/quantum-channel-basics.ipynb
@@ -169,7 +169,7 @@
     "\n",
     "## Convex combinations of channels\n",
     "\n",
-    "Suppose we have two channels $\\Phi_0$ and $\\Phi_1$ that share the same input system and the same output system.\n",
+    "Suppose we have two channels, $\\Phi_0$ and $\\Phi_1,$ that share the same input system and the same output system.\n",
     "For any real number $p\\in[0,1],$ we could decide to apply $\\Phi_0$ with probability $p$ and\n",
     "$\\Phi_1$ with probability $1-p,$ which gives us a new channel that can be written as $p \\Phi_0 + (1-p) \\Phi_1.$\n",
     "Explicitly, the way that this channel acts on a given density matrix is specified by the following simple equation.\n",
