--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "![A diagram depicting a Stinespring representation of a channel whose input and output systems are the same](/learning/images/courses/general-formulation-of-quantum-information/quantum-channels/Stinespring-X-to-X.svg)\n",
     "\n",
-    "In this diagram the wires represent arbitrary systems, as indicated by the labels above the wires, and not necessarily single qubits.\n",
+    "In this diagram, the wires represent arbitrary systems, as indicated by the labels above the wires, and not necessarily single qubits.\n",
     "Also, the *ground* symbol commonly used in electrical engineering indicates explicitly that $\\mathsf{W}$ is discarded.\n",
     "\n",
     "In words, the way the implementation works is as follows.\n",
