--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -80,7 +80,7 @@
     "It's not at all obvious, but every channel does in fact have a Stinespring representation, as we will see by the end of the lesson.\n",
     "We'll also see that Stinespring representations aren't unique; there will always be different ways to implement the same channel in the manner that's been described.\n",
     "\n",
-    "> **Remark**. In the context of quantum information, term *Stinespring representation* commonly refers to a slightly more general expression of a channel having the form\n",
+    "> **Remark**. In the context of quantum information, the term *Stinespring representation* commonly refers to a slightly more general expression of a channel having the form\n",
     "> $$\n",
     "> \\Phi(\\rho) = \\operatorname{Tr}_{\\mathsf{G}} \\bigl( A \\rho A^{\\dagger} \\bigr)\n",
     "> $$\n",
