--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -69,7 +69,7 @@
     "In order for $U$ to be unitary, it must be a square matrix.\n",
     "This requires that the pair $(\\mathsf{G},\\mathsf{Y})$ has the same number of classical states as the pair $(\\mathsf{W},\\mathsf{X}),$ and so the systems $\\mathsf{W}$ and $\\mathsf{G}$ must be chosen in a way that allows this.\n",
     "\n",
-    "We obtain a similar mathematical expression of the resulting channel $\\Phi$ to what we had before.\n",
+    "We obtain a mathematical expression of the resulting channel, $\\Phi,$ that is similar to what we had before.\n",
     "\n",
     "$$\n",
     "\\Phi(\\rho) = \\operatorname{Tr}_{\\mathsf{G}} \\bigl( U (\\vert 0\\rangle \\langle 0 \\vert_{\\mathsf{W}} \\otimes \\rho) U^{\\dagger} \\bigr)\n",
