--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -36,7 +36,7 @@
     "then a unitary operation is performed on the compound system;\n",
     "and finally the workspace system is discarded (or traced out), leaving the output of the channel.\n",
     "\n",
-    "The following figure depicts such an implementation, in the form of a circuit diagram, for a channel whose input and output systems are the same system $\\mathsf{X}.$\n",
+    "The following figure depicts such an implementation, in the form of a circuit diagram, for a channel whose input and output systems are the same system, $\\mathsf{X}.$\n",
     "\n",
     "![A diagram depicting a Stinespring representation of a channel whose input and output systems are the same](/learning/images/courses/general-formulation-of-quantum-information/quantum-channels/Stinespring-X-to-X.svg)\n",
     "\n",
