--- a/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/quantum-channels/representations-of-channels.ipynb
@@ -358,7 +358,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "That is, the completely dephasing channel is an example of a mixed-unitary channel, and more specifically a Pauli channel.\n",
+    "That is, the completely dephasing channel is an example of a mixed-unitary channel, and more specifically, a Pauli channel.\n",
     "\n",
     "### Qubit reset channel\n",
     "\n",
