--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -24,6 +24,8 @@ The tutorials highlight techniques where repeated sampling enables estimation of
 
 * [Sample-based quantum diagonalization of a chemistry Hamiltonian](/docs/tutorials/sample-based-quantum-diagonalization)
 
+* [Sample-based Krylov quantum diagonalization of a fermionic lattice Hamiltonian](/docs/tutorials/sample-based-krylov-quantum-diagonalization)
+
 * [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
 
 * [Quantum approximate optimization algorithm](/docs/tutorials/quantum-approximate-optimization-algorithm)
