fix title in index

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -24,7 +24,7 @@ The tutorials highlight techniques where repeated sampling enables estimation of
 
 * [Sample-based quantum diagonalization of a chemistry Hamiltonian](/docs/tutorials/sample-based-quantum-diagonalization)
 
-* [Sample-based Krylov quantum diagonalization of a fermionic lattice Hamiltonian](/docs/tutorials/sample-based-krylov-quantum-diagonalization)
+* [Improving energy estimation of a fermionic lattice model with SQD](/docs/tutorials/sample-based-krylov-quantum-diagonalization)
 
 * [Compute dissociation curves for strong coupling systems with QunaSys QSCI](/docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci)
 
