--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ee388de5-2507-48ff-97a6-6777698d6256",
    "metadata": {},
    "source": [
     "{/* cspell:ignore DMRG textrm varepsilon vecs pqrs ijkl */}\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc5cc74e-06bf-45ac-a69b-81778138e08f",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -80,6 +82,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8540487a-8033-49c2-9f30-022336105f64",
    "metadata": {},
    "source": [
     "## Step 1: Map problem to a quantum circuit"
@@ -87,6 +90,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e6652bd-c97d-4f2f-98a7-d44857805cf1",
    "metadata": {},
    "source": [
     "First, we generate the SIAM Hamiltonian in the position basis. The Hamiltonian is represented by the matrix $h_{pq}$ and the tensor $h_{pqrs}$. Then, we rotate it to the momentum basis. In the position basis, we place the impurity at the first site. However, when we rotate to the momentum basis, we move the impurity to a central site to facilitate interactions with other orbitals."
@@ -95,6 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b5cb9c28-4721-4141-8665-96885038e210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +212,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e888edf2-7865-41a8-be57-6ddb72dd0cc7",
    "metadata": {},
    "source": [
     "Next, we generate the circuits to produce the Krylov basis states.\n",
@@ -219,6 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0f729f86-1814-4d5a-ae65-3f9614e103b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,6 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "9f2cc4d4-ecac-457a-bcae-558319668e1f",
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "827976ec-4815-4707-80b1-e13fb2fef309",
    "metadata": {},
    "outputs": [
     {
@@ -361,6 +370,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8ca6be4-61d9-47be-8099-8712c7ecc774",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum execution"
@@ -368,6 +378,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3304e1b-9c7c-4212-8744-d1c62292eced",
    "metadata": {},
    "source": [
     "Now that we have created the circuits, we can optimize them for a target hardware. We pick the least busy QPU with at least 127 qubits. Check out the [Qiskit IBM Runtime docs](https://docs.quantum.ibm.com/guides/get-started-with-primitives#get-started-with-sampler) for more info."
@@ -376,6 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "2d2fdbff-1e22-45af-a2eb-c334e4328c59",
    "metadata": {},
    "outputs": [
     {
@@ -398,6 +410,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce3e6a52-7b99-49b6-8294-b005efa59cfc",
    "metadata": {},
    "source": [
     "Now, we transpile the circuits to the target backend using Qiskit."
@@ -406,6 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "c8643533-9fec-40bf-a307-da8839b1e444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,6 +433,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6cfd3eea-e2d9-40a5-a449-1d3d790a5f2d",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit Primitives"
@@ -426,6 +441,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad48e3e6-1013-45a1-942c-63766fed5819",
    "metadata": {},
    "source": [
     "After optimizing the circuits for hardware execution, we are ready to run them on the target hardware and collect samples for ground state energy estimation. After using the Sampler primitive to sample bitstrings from each circuit, we combine all of the results into a single counts dictionary and plot the top 20 most commonly sampled bitstrings."
@@ -434,6 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "80eee553-60d6-4258-88ab-d8d120418c36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,6 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "10af4663-7375-4b50-bae6-9f3d5106457b",
    "metadata": {},
    "outputs": [
     {
@@ -475,6 +493,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2aa74455-d16b-4ac3-a354-54a79d5c5759",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result to desired classical format"
@@ -482,6 +501,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3f7713c-a4e6-407f-94de-0e5cfeb1134c",
    "metadata": {},
    "source": [
     "Now, we run the SQD algorithm using the `diagonalize_fermionic_hamiltonian` function. See the [API documentation](https://qiskit.github.io/qiskit-addon-sqd/apidocs/qiskit_addon_sqd.fermion.html#qiskit_addon_sqd.fermion.diagonalize_fermionic_hamiltonian) for explanations of the arguments to this function."
@@ -490,6 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "7609d1e1-e8ef-48e1-a965-97927f403163",
    "metadata": {},
    "outputs": [
     {
@@ -589,6 +610,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3dee9c61-fc42-48e9-8888-af8fc831cd5c",
    "metadata": {},
    "source": [
     "The following code cell plots the results. The first plot shows the computed energy as a function of the number of configuration recovery iterations, and the second plot shows the average occupancy of each spatial orbital after the final iteration. For the reference energy, we use the results of a [DMRG](https://en.wikipedia.org/wiki/Density_matrix_renormalization_group) calculation that was performed separately."
@@ -597,6 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "b6879566-8bf5-4c28-bfb6-b2686692e3d3",
    "metadata": {},
    "outputs": [
     {
@@ -668,6 +691,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c9f4976-d770-426a-822e-e6756c2cfbe7",
    "metadata": {},
    "source": [
     "### Verifying the energy\n",
@@ -678,6 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "e2b9de72-61cf-49d3-a1b5-f043e4b16956",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +726,7 @@
  "metadata": {
   "description": "Use the sample-based quantum diagonalization algorithm to simulate the single-impurity Anderson model using noisy quantum hardware.",
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -715,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3"
   },
   "title": "Improving energy estimation of a fermionic lattice model with SQD"
  },
