--- a/docs/api/qiskit-addon-sqd/0.10/configuration-recovery.mdx
+++ b/docs/api/qiskit-addon-sqd/0.10/configuration-recovery.mdx
@@ -1,6 +1,6 @@
 ---
-title: configuration_recovery (latest version)
-description: API reference for qiskit_addon_sqd.configuration_recovery in the latest version of qiskit-addon-sqd
+title: configuration_recovery (v0.10)
+description: API reference for qiskit_addon_sqd.configuration_recovery in qiskit-addon-sqd v0.10
 in_page_toc_min_heading_level: 2
 python_api_type: module
 python_api_name: qiskit_addon_sqd.configuration_recovery
@@ -18,7 +18,7 @@ Functions for performing self-consistent configuration recovery.
 
 ### post\_select\_by\_hamming\_weight
 
-<Function id="qiskit_addon_sqd.configuration_recovery.post_select_by_hamming_weight" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.11/qiskit_addon_sqd/configuration_recovery.py#L25-L49" signature="post_select_by_hamming_weight(bitstring_matrix, *, hamming_right, hamming_left)">
+<Function id="qiskit_addon_sqd.configuration_recovery.post_select_by_hamming_weight" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/configuration_recovery.py#L25-L49" signature="post_select_by_hamming_weight(bitstring_matrix, *, hamming_right, hamming_left)">
   Post-select bitstrings based on the hamming weight of each half.
 
   **Parameters**
@@ -38,7 +38,7 @@ Functions for performing self-consistent configuration recovery.
 
 ### recover\_configurations
 
-<Function id="qiskit_addon_sqd.configuration_recovery.recover_configurations" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.11/qiskit_addon_sqd/configuration_recovery.py#L52-L121" signature="recover_configurations(bitstring_matrix, probabilities, avg_occupancies, num_elec_a, num_elec_b, rand_seed=None)">
+<Function id="qiskit_addon_sqd.configuration_recovery.recover_configurations" github="https://github.com/Qiskit/qiskit-addon-sqd/tree/stable/0.10/qiskit_addon_sqd/configuration_recovery.py#L52-L121" signature="recover_configurations(bitstring_matrix, probabilities, avg_occupancies, num_elec_a, num_elec_b, rand_seed=None)">
   Refine bitstrings based on average orbital occupancy and a target hamming weight.
 
   This function refines each bit in isolation in an attempt to transform the Hilbert space represented by the input `bitstring_matrix` into a space closer to that which supports the ground state.
@@ -50,7 +50,7 @@ Functions for performing self-consistent configuration recovery.
   **Parameters**
 
   *   **bitstring\_matrix** ([*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")) – A 2D array of `bool` representations of bit values such that each row represents a single bitstring
-  *   **probabilities** ([*Sequence*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence "(in Python v3.13)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*] |* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")) – A 1D array specifying a probability distribution over the bitstrings
+  *   **probabilities** ([*Sequence*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence "(in Python v3.13)")*\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*]*) – A 1D array specifying a probability distribution over the bitstrings
   *   **avg\_occupancies** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")*\[*[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")*,* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)")*]*) – A length-2 tuple of arrays holding the mean occupancy of the spin-up and spin-down orbitals, respectively. The occupancies should be formatted as: `(array([occ_a_0, ..., occ_a_N]), array([occ_b_0, ..., occ_b_N]))`
   *   **num\_elec\_a** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of spin-up electrons in the system.
   *   **num\_elec\_b** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The number of spin-down electrons in the system.
