fix bad math expression

--- a/docs/api/qiskit/dev/qiskit.quantum_info.PauliLindbladMap.mdx
+++ b/docs/api/qiskit/dev/qiskit.quantum_info.PauliLindbladMap.mdx
@@ -466,7 +466,7 @@ $$
     For a Pauli $Q$, the fidelity with respect to the Pauli Lindblad map $\Lambda$ is the real number $f(Q)$ for which $\Lambda(Q) = f(Q) Q$. I.e. every Pauli is an eigenvector of the linear map $\Lambda$, and the fidelity is the corresponding eigenvalue. For a Pauli Lindblad map with generator set $K$ and rate function $\lambda : K \rightarrow \mathbb{R}$, the pauli fidelity mathematically is
 
 $$
-f(Q) = \exp\left(-2 \sum_{P \in K} \lambda(P) \langle P, Q\rangle_{sp}),
+f(Q) = \exp\left(-2 \sum_{P \in K} \lambda(P) \langle P, Q\rangle_{sp}\right),
 $$
 
     where $\langle P, Q\rangle_{sp}$ is $0$ if $P$ and $Q$ commute, and $1$ if they anti-commute.
