--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -153,7 +153,11 @@
     "\n",
     "tem_function_name = \"algorithmiq/tem\"\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog()\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_cloud\",\n",
+    "    instance=\"USER_CRN\",\n",
+    "    token=\"USER_API_KEY\"\n",
+    ")\n",
     "\n",
     "# Load your function\n",
     "tem = catalog.load(tem_function_name)"
@@ -179,7 +183,6 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# Create a quantum circuit\n",
     "qc = QuantumCircuit(3)\n",
@@ -199,17 +202,16 @@
     "observable = SparsePauliOp(\"IYX\", 1.0)\n",
     "\n",
     "# Define the execution options\n",
-    "service = QiskitRuntimeService()\n",
-    "backend_name = service.least_busy(operational=True).name\n",
-    "\n",
-    "# The following line gets the instance of the active QiskitRuntimeService account.\n",
-    "instance = service.active_account()[\"instance\"]\n",
-    "\n",
     "pub = (qc, [observable])\n",
     "options = {\"default_precision\": 0.02}\n",
     "\n",
+    "# Define backend to use, TEM will choose the least busy device reported by IBM if not specified\n",
+    "backend_name = \"ibm_torino\"\n",
+    "\n",
     "job = tem.run(\n",
-    "    pubs=[pub], instance=instance, backend_name=backend_name, options=options\n",
+    "    pubs=[pub],\n",
+    "    backend_name=backend_name,\n",
+    "    options=options\n",
     ")"
    ]
   },
@@ -279,7 +281,7 @@
     "<LegacyContent>\n",
     "Name | Type | Description | Required | Default | Example\n",
     "-- | -- | -- | -- | -- | --\n",
-    "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/docs/guides/primitive-input-output#overview-of-pubs) for more information. The circuits don't need to be ISA circuits. | Yes | N/A | (circuit, observables)\n",
+    "`pubs` | Iterable[EstimatorPubLike] | An iterable of PUB-like (primitive unified bloc) objects, such as tuples `(circuit, observables)` or `(circuit, observables, parameters, precision)`. See [Overview of PUBs](/guides/primitive-input-output#overview-of-pubs) for more information. If a non-ISA circuit is passed, it will be transpiled with optimal settings. If an ISA circuit is passed, it will not be transpiled, in this case the observable must be defined on the whole QPU. | Yes | N/A | (circuit, observables)\n",
     "`backend_name` | str | Name of the backend to make the query.| No | If not provided, the least busy backend will be used. | \"ibm_fez\"\n",
     "`instance` | str | The hub/group/project to use in that format. | Yes | N/A |\"hub1/group1/project1\"\n",
     "`options` | dict | Input options. See `Options` section for more details. | No | See `Options` section for more details.| \\{\"max_bond_dimension\": 100\\}\n",
@@ -297,8 +299,8 @@
     "<Admonition type=\"caution\">\n",
     "  TEM currently has the following limitations:\n",
     "\n",
-    "  - Parametrized circuits are not supported. The parameters argument should be set to `None` if precision is specified.\n",
-    "  - Only circuits with linear connectivity are supported. This restriction will be removed in future versions.\n",
+    "  - Parametrized circuits are not supported. The parameters argument should be set to `None` if precision is specified. This restriction will be removed in future versions.\n",
+    "  - Only circuits without loops are supported. This restriction will be removed in future versions.\n",
     "  - Non-unitary gates, such as reset, measure, and all forms of control flow are not supported. Support for reset will be added in upcoming releases.\n",
     "</Admonition>"
    ]
