update provider values to use quantum_platform

--- a/docs/guides/retired-qpus.ipynb
+++ b/docs/guides/retired-qpus.ipynb
@@ -123,7 +123,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "# Load your IBM Quantum account. Replace \"<IBM Cloud CRN>\" with your desired instance's CRN or name.\n",
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\", instance=\"<IBM Cloud CRN or Name>\")\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\", instance=\"<IBM Cloud CRN or Name>\")\n",
     "\n",
     "# Retrieve a single job by id\n",
     "job = service.job(<job_id>)\n",
