--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -263,7 +263,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 
     ```python
     service = QiskitRuntimeService(
-        channel="ibm_cloud", # `channel` distinguishes between different account types
+        channel="ibm_quantum_platform", # `channel` distinguishes between different account types
         token=token, # Your token is confidential.
         # Take care not to share your key in public code.
         instance="<IBM Cloud CRN>",
@@ -299,7 +299,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     from qiskit_ibm_runtime import QiskitRuntimeService
 
     service = QiskitRuntimeService(
-      channel="ibm_cloud",
+      channel="ibm_quantum_platform",
       # Delete your key on the API keys page after entering this code:
       token="<IBM Cloud API key>",
       instance="<IBM Cloud CRN>"
