--- a/docs/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/migration-guides/qiskit-algorithms-module.mdx
@@ -612,7 +612,7 @@ optimizer = SLSQP(maxiter=10)
 hamiltonian = SparsePauliOp.from_list([("XXZ", 1), ("XYI", 1)])
 
 # example executing on a QPU
-service = QiskitRuntimeService(channel="ibm_cloud")
+service = QiskitRuntimeService(channel="ibm_quantum_platform")
 backend = service.backend("ibm_sherbrooke")
 
 with Session(backend=backend) as session:
