--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -104,7 +104,7 @@ Follow these steps to start using the new version of IBM Quantum Platform.
 
     QiskitRuntimeService.save_account(
       token=token,
-      channel="ibm_cloud", # `channel` distinguishes between different account types.
+      channel="ibm_quantum_platform", # `channel` distinguishes between different account types.
       instance="instance-CRN", # Copy the instance CRN from the Instance section on the dashboard.
       name="account-name", # Optionally name this set of credentials.
       overwrite=True # Only needed if you already have Cloud credentials.
@@ -132,7 +132,7 @@ Follow these steps to start using the new version of IBM Quantum Platform.
 
     # After using the following code, go to the IBM Cloud API keys page (https://cloud.ibm.com/iam/apikeys)
     # and disable your API key (click Enabled slider in the API key field)
-    service = QiskitRuntimeService(channel="ibm_cloud", token="<MY_IBM_QUANTUM_TOKEN>", instance="<MY_INSTANCE_CRN>")
+    service = QiskitRuntimeService(channel="ibm_quantum_platform", token="<MY_IBM_QUANTUM_TOKEN>", instance="<MY_INSTANCE_CRN>")
     ```
 
     <Admonition type="caution">
