--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/convex-combinations.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/convex-combinations.ipynb
@@ -268,7 +268,7 @@
     "That is, there will always exist a collection of unit vectors $\\{\\vert\\psi_0\\rangle,\\ldots,\\vert\\psi_{m-1}\\rangle\\}$ and a probability vector $(p_0,\\ldots,p_{m-1})$ for which the equation above is true.\n",
     "\n",
     "We can, moreover, always choose the number $m$ so that it agrees with the number of classical states of the system being considered, and we can select the quantum state vectors to be orthogonal.\n",
-    "The spectral theorem, which we encountered in the "Foundations of quantum algorithms" course, allows us to conclude this.\n",
+    "The spectral theorem, which we encountered in the \"Foundations of quantum algorithms\" course, allows us to conclude this.\n",
     "Here's a restatement of the spectral theorem for convenience.\n",
     "\n",
     "> **Theorem** (spectral theorem).\n",
