--- a/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/density-matrices/multiple-systems.ipynb
@@ -116,7 +116,7 @@
     "\n",
     "4. *Entangled states*. Not all states of pairs of systems are separable. In the general formulation of quantum information, this is how entanglement is defined: states that are not separable are said to be *entangled*.\n",
     "\n",
-    "   Note that this terminology is consistent with the terminology we used in the "Basics of quantum information" course. There we said that quantum state vectors that are not product states represent entangled states — and indeed, for any quantum state vector $\\vert\\psi\\rangle$ that is not a product state, we find that the state represented by the density matrix $\\vert\\psi\\rangle\\langle\\psi\\vert$ is not separable. Entanglement is much more complicated than this for states that are not pure.\n",
+    "   Note that this terminology is consistent with the terminology we used in the \"Basics of quantum information\" course. There we said that quantum state vectors that are not product states represent entangled states — and indeed, for any quantum state vector $\\vert\\psi\\rangle$ that is not a product state, we find that the state represented by the density matrix $\\vert\\psi\\rangle\\langle\\psi\\vert$ is not separable. Entanglement is much more complicated than this for states that are not pure.\n",
     "\n",
     "## Reduced states and the partial trace\n",
     "\n",
