--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -35,7 +35,7 @@ This section summarizes the recent enhancements and new features for the new [IB
 
 ![Only the latest workloads now shown by default](/docs/images/guides/latest-updates/workloads.avif)
 
-- A new provider release, featuring:
+- A new qiskit-ibm-runtime release, featuring:
   - Support for private jobs when using Qiskit Functions
   - A new channel for the platform that makes instance selection optional, which simplifies account setup and backend access by automatically checking all available instances. This update benefits users who manage multiple instances or prefer a streamlined workflow without specifying instance details each time. Developers and researchers working across various projects with different levels of access and multiple backends will find this especially helpful.
 
