set title and description in notebook metadata

--- a/docs/tutorials/directed-acyclic-graph-circuit.ipynb
+++ b/docs/tutorials/directed-acyclic-graph-circuit.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "id": "b66e7fc3",
    "metadata": {
+    "description": "This notebook provides a detailed tutorial on using the DAGCircuit (Directed Acyclic Graph Circuit) in Qiskit.",
+    "title": "Comprehensive Guide to Qiskit's DAGCircuit",
     "tags": [
      "Qiskit 2.0.2"
     ]
