--- a/docs/tutorials/directed-acyclic-graph-circuit.ipynb
+++ b/docs/tutorials/directed-acyclic-graph-circuit.ipynb
@@ -5,10 +5,10 @@
    "id": "b66e7fc3",
    "metadata": {
     "description": "This notebook provides a detailed tutorial on using the DAGCircuit (Directed Acyclic Graph Circuit) in Qiskit.",
-    "title": "Comprehensive Guide to Qiskit's DAGCircuit",
     "tags": [
      "Qiskit 2.0.2"
-    ]
+    ],
+    "title": "Comprehensive Guide to Qiskit's DAGCircuit"
    },
    "source": [
     "# Comprehensive Guide to Qiskit's `DAGCircuit`"
@@ -42,7 +42,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "866819e3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:27.180223Z",
+     "iopub.status.busy": "2025-06-06T15:33:27.179943Z",
+     "iopub.status.idle": "2025-06-06T15:33:28.352355Z",
+     "shell.execute_reply": "2025-06-06T15:33:28.351280Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Essential Imports\n",
@@ -79,6 +86,12 @@
    "execution_count": 2,
    "id": "fd7e8006",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:28.357624Z",
+     "iopub.status.busy": "2025-06-06T15:33:28.357030Z",
+     "iopub.status.idle": "2025-06-06T15:33:28.366057Z",
+     "shell.execute_reply": "2025-06-06T15:33:28.364810Z"
+    },
     "scrolled": false
    },
    "outputs": [
@@ -262,7 +275,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "bdb0a4da",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:28.370714Z",
+     "iopub.status.busy": "2025-06-06T15:33:28.370230Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.267762Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.267031Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -301,7 +321,14 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "46e299e6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.270015Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.269716Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.425467Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.424767Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -362,7 +389,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "f9d0f4c2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.427552Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.427349Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.591699Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.591027Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -427,7 +461,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "638bd8e3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.594202Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.593941Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.599160Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.598477Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -490,7 +531,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "3d9ef526",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.601203Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.600981Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.605739Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.605121Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -556,7 +604,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "bde8f84f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.607798Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.607574Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.613276Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.612621Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -627,7 +682,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "12e47fba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.615168Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.614945Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.619888Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.619313Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -682,7 +744,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "05cc30a9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.621842Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.621641Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.627818Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.626736Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -757,7 +826,14 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "a97b83c6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.630573Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.630332Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.710609Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.709834Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -802,7 +878,14 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "e0591451",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.712985Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.712748Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.759824Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.759214Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -857,7 +940,14 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "057cd6a8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.761935Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.761729Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.799076Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.798474Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -913,7 +1003,14 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "55e03d52",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.801489Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.801285Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.822544Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.821830Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -949,7 +1046,14 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "dc2aed34",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.824538Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.824340Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.844434Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.843665Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -984,7 +1088,14 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "6fc18dcb",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.846399Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.846203Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.901184Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.900002Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1082,7 +1193,14 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "948a7caf",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.903945Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.903702Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.956941Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.956250Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1108,7 +1226,14 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "1dac2376",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.959606Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.959357Z",
+     "iopub.status.idle": "2025-06-06T15:33:29.965882Z",
+     "shell.execute_reply": "2025-06-06T15:33:29.965236Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# IfElseOp example\n",
@@ -1122,7 +1247,14 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "a084859d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:29.968573Z",
+     "iopub.status.busy": "2025-06-06T15:33:29.968307Z",
+     "iopub.status.idle": "2025-06-06T15:33:30.022126Z",
+     "shell.execute_reply": "2025-06-06T15:33:30.021388Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1144,7 +1276,14 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "4e4304bd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:30.024465Z",
+     "iopub.status.busy": "2025-06-06T15:33:30.024234Z",
+     "iopub.status.idle": "2025-06-06T15:33:31.088792Z",
+     "shell.execute_reply": "2025-06-06T15:33:31.088030Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1178,7 +1317,14 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "5bad099b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:31.091164Z",
+     "iopub.status.busy": "2025-06-06T15:33:31.090830Z",
+     "iopub.status.idle": "2025-06-06T15:33:31.130616Z",
+     "shell.execute_reply": "2025-06-06T15:33:31.129879Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1200,7 +1346,14 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "dec3c6c0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:31.132780Z",
+     "iopub.status.busy": "2025-06-06T15:33:31.132554Z",
+     "iopub.status.idle": "2025-06-06T15:33:31.276321Z",
+     "shell.execute_reply": "2025-06-06T15:33:31.275680Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1348,7 +1501,14 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "7f058027",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-06T15:33:31.278583Z",
+     "iopub.status.busy": "2025-06-06T15:33:31.278362Z",
+     "iopub.status.idle": "2025-06-06T15:33:31.440833Z",
+     "shell.execute_reply": "2025-06-06T15:33:31.440117Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1542,7 +1702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
