--- a/docs/tutorials/directed-acyclic-graph-circuit.ipynb
+++ b/docs/tutorials/directed-acyclic-graph-circuit.ipynb
@@ -8,10 +8,10 @@
     "tags": [
      "Qiskit 2.0.2"
     ],
-    "title": "Comprehensive Guide to Qiskit's `DAGCircuit`"
+    "title": "Comprehensive Guide to Qiskit's DAGCircuit"
    },
    "source": [
-    "# Comprehensive Guide to Qiskit's `DAGCircuit`"
+    "# Comprehensive Guide to Qiskit's DAGCircuit"
    ]
   },
   {
